--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
   margin-left: auto;
   display: flex;
   flex-direction: row;
-  gap: .2rem;
+  gap: 0.2rem;
 }
 .turn-indicator {
   width: 24px;
